--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width">
 		<title>Module04</title>
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/jellee-typeface" type="text/css"/>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
  
