--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
      <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-		<title>Module04</title>
+		<title>My Portfolio</title>
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/jellee-typeface" type="text/css"/>
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
