--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 
 
+
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
      <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-		<title>My Portfolio</title>
+		<title>Module04</title>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/saucy-jack" type="text/css"/>
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/jellee-typeface" type="text/css"/>
-		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
+
+    <img class="image1" src="https://static1.squarespace.com/static/570a826545bf2194c867f0e6/t/58f8c47ff5e2310918df0451/1492698252108/Welcome.png" width="1200" height="300" />
+      <img src="https://images.fineartamerica.com/images/artworkimages/medium/1/2-seattle-skyline-watercolor-olga-shvartsur-transparent.png" width="`00" height="700"/>
  
-  <div class="parent">
-  <img class="image1" src="https://mbtskoudsalg.com/images/seattle-skyline-silhouette-png-3.png" />
-  <img class="image2" src="https://static1.squarespace.com/static/570a826545bf2194c867f0e6/t/58f8c47ff5e2310918df0451/1492698252108/Welcome.png" />
-</div>
+
 		
-   
+
   
    <div id="nav">
 				<ul>
-					<li><a href=" https://jdang95.github.io/portfolio/">HOME</a></li>
+					<li><a href= "https://jdang95.github.io/portfolio/">HOME</a></li>
 					<li><a href="">ABOUT</a></li>
 					<li><a href="">COURSEWORK</a></li>
 					<li><a href="">ARTIFACTS</a></li>
@@ -33,10 +35,6 @@
 		</div>
 	
      
-		
-		<div id="footer">
-			<h2>&copy; Copyright 2018</h2>
-		</div>
     	</body>
 </html>
 
