--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<title>Module04</title>
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/saucy-jack" type="text/css"/>
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/jellee-typeface" type="text/css"/>
+		 <link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 
