--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 
 
-
-
 <!DOCTYPE html>
 <html lang="en">
 	<head>
      <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 		<title>Module04</title>
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/saucy-jack" type="text/css"/>
+  <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/rebecca" type="text/css"/>
     <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/jellee-typeface" type="text/css"/>
-		 <link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-
-    <img class="image1" src="https://static1.squarespace.com/static/570a826545bf2194c867f0e6/t/58f8c47ff5e2310918df0451/1492698252108/Welcome.png" width="1200" height="300" />
-      <img src="https://images.fineartamerica.com/images/artworkimages/medium/1/2-seattle-skyline-watercolor-olga-shvartsur-transparent.png" width="`00" height="700"/>
+ 
+  <img src="https://images.fineartamerica.com/images/artworkimages/medium/1/2-seattle-skyline-watercolor-olga-shvartsur-transparent.png"/>
  
 
 		
@@ -34,7 +31,7 @@
 				</ul>
 			</div>
 		</div>
-	
+  <h1> Welcome to Julia Dang's page!</h1>
      
     	</body>
 </html>
