--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <div id="nav">
 				<ul>
 					<li><a href= "https://jdang95.github.io/portfolio/">HOME</a></li>
-					<li><a href="">ABOUT</a></li>
+					<li><a href="https://jdang95.github.io/about-me/">ABOUT</a></li>
 					<li><a href="">COURSEWORK</a></li>
 					<li><a href="">ARTIFACTS</a></li>
 					<li><a href="">MODULE ASSIGNMENTS</a></li>
