--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<ul>
 					<li><a href= "https://jdang95.github.io/portfolio/">HOME</a></li>
 					<li><a href="https://jdang95.github.io/about-me/">ABOUT</a></li>
-					<li><a href="">COURSEWORK</a></li>
+					<li><a href="https://jdang95.github.io/coursework/">COURSEWORK</a></li>
 					<li><a href="">ARTIFACTS</a></li>
 					<li><a href="">MODULE ASSIGNMENTS</a></li>
           <li><a href="">CONTACT ME</a></li>
