--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			</div>
 		</div>
   <h1> Welcome to Julia Dang's page!</h1>
+	<p> This is my home page website </p>
      
     	</body>
 </html>
