--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
   
    <div id="nav">
 				<ul>
-					<li><a href= "https://jdang95.github.io/portfolio/">HOME</a></li>
-					<li><a href="https://jdang95.github.io/about-me/">ABOUT</a></li>
-					<li><a href="https://jdang95.github.io/coursework/">COURSEWORK</a></li>
-					<li><a href="">ARTIFACTS</a></li>
-					<li><a href="">MODULE ASSIGNMENTS</a></li>
+					<li><a href= "https://jdang95.github.io/portfolio/"target="_blank">HOME</a></li>
+					<li><a href="https://jdang95.github.io/about-me/"target="_blank">ABOUT</a></li>
+					<li><a href="https://jdang95.github.io/coursework/"target="_blank">COURSEWORK</a></li>
+					<li><a href=""target="_blank">ARTIFACTS</a></li>
+					<li><a href=""target="_blank">MODULE ASSIGNMENTS</a></li>
           <li><a href="">CONTACT ME</a></li>
 					<li><a href="">"OWN" CREATIVE PAGE</a></li>
 					
