--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<li><a href="https://jdang95.github.io/coursework/"target="_blank">COURSEWORK</a></li>
 					<li><a href=" https://jdang95.github.io/artifacts/"target="_blank">ARTIFACTS</a></li>
 					<li><a href="https://jdang95.github.io/modules/"target="_blank">MODULE ASSIGNMENTS</a></li>
-          				<li><a href="">CONTACT ME</a></li>
+          				<li><a href="https://jdang95.github.io/ContactMe/">CONTACT ME</a></li>
 					<li><a href="">"OWN" CREATIVE PAGE</a></li>
 					
 				</ul>
